fixed navbar issue on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,10 +48,11 @@ table {
 }
 
 */
-
-body {
-  background-color: white;
+html {
+  position: relative;
 }
+
+
 
 * {
   font-family: lato;
@@ -84,9 +85,11 @@ body {
 
 .calendar {
   background-color: lightgrey;
-  padding: 2px;
-  margin: 4px 2px;
-  transition: background-color 0.5s ease
+  transition: background-color 0.5s ease;
+  position: relative;
+  padding: 30px;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .calendar h2 {
@@ -97,6 +100,7 @@ body {
 .calendar:hover {
   background-color: white;
 }
+
 
 @media screen and (max-width: 533px) {
   .highlight {
@@ -109,6 +113,15 @@ body {
   background-color: #1c415f;
   padding: 30px;
   color: white;
+  margin-bottom: 15px;
+}
+
+.subtitle {
+  background-color: #1c415f;
+  padding: 30px;
+  color: white;
+  margin-top: 15x;
+  margin-bottom: 15px;
 }
 
 #box-wrapper {
@@ -121,7 +134,9 @@ body {
 }
 
 .footer {
-    padding: 30px;
+  height: 20%;
+  border-radius: 0;
+
 }
 
 .navbar {
